# MeshProjection

./: CMakeLists.txt  README.md
includes/GLFW/: glfw3.h
includes/glm/: trigonometric.hpp
includes/glm/ext/: matrix_clip_space.hpp  matrix_projection.hpp  matrix_transform.hpp  quaternion_transform.hpp  quaternion_trigonometric.hpp
src/: CMakeLists.txt  camera.cpp  camera.h  color.hpp  file_process.cpp  file_process.h  general_algorithm.cpp  general_algorithm.h  main.cpp  mesh.cpp  mesh.h  mesh_projection.cpp  mesh_projection.h  model.cpp  model.h  psbdataset.cpp  psbdataset.h  render.cpp  render.h  shader.cpp  shader.h  shapenetcore_dataset.cpp  shapenetcore_dataset.h  user_exception.hpp
src/shader/: depth_map.frag  depth_map.fs  depth_map.vert  shaded.frag  shaded.fs  shaded.vert  shaded_seg.frag  shaded_seg.fs  shaded_seg.vert  shaded_seg.vs
